implement sindSingle for finding single busStopes based on busID
